k8s-deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: devsecops-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops-api
  template:
    metadata:
      labels:
        app: devsecops-api
    spec:
      imagePullSecrets:
      - name : ecr-cred
      containers:
      - name: api
        image: 187157282695.dkr.ecr.ap-south-1.amazonaws.com/devsecops-api:f6d80a986fe7127971b5302379f8cccab999d3c5
        ports:
        - containerPort: 8000
