ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsecops-api-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/" 
        backend:
          service:
            name: devsecops-api-svc
            port: 
              number: 80
